opacity to layer feature added